--- a/course/nav.css
+++ b/course/nav.css
@@ -169,7 +169,7 @@ nav {
   display: block;
   width: 100%;
   height: 100%;
-  background: url(../images/search.png) no-repeat center;
+  background: url(../resource/images/search.png) no-repeat center;
 }
 /* 信息栏 */
 .info {
