--- a/course/nav.css
+++ b/course/nav.css
@@ -141,6 +141,17 @@ body {
   height: 50px;
   background-color: #C9D7FB;
 }
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../resource/iconfonts/icomoon.eot?9379p4');
+  src:  url('../resource/iconfonts/icomoon.eot?9379p4#iefix') format('embedded-opentype'),
+    url('../resource/iconfonts/icomoon.ttf?9379p4') format('truetype'),
+    url('../resource/iconfonts/icomoon.woff?9379p4') format('woff'),
+    url('../resource/iconfonts/icomoon.svg?9379p4#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
 /* 导航栏Start */
 nav {
   height: 50px;
@@ -165,12 +176,11 @@ nav {
   height: 100%;
   background-color: #F6F6F6;
   cursor: pointer;
-}
-.search i {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: url(../resource/images/search.png) no-repeat center;
+  text-align: center;
+  line-height: 50px;
+  font-family: icomoon;
+  font-size: 20px;
+  color: #B1B1B1;
 }
 /* 信息栏 */
 .info {
