--- a/course/course.css
+++ b/course/course.css
@@ -1,10 +1,11 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../resource/iconfonts/icomoon.eot?9379p4');
-  src:  url('../resource/iconfonts/icomoon.eot?9379p4#iefix') format('embedded-opentype'),
-    url('../resource/iconfonts/icomoon.ttf?9379p4') format('truetype'),
-    url('../resource/iconfonts/icomoon.woff?9379p4') format('woff'),
-    url('../resource/iconfonts/icomoon.svg?9379p4#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("../resource/iconfonts/icomoon.eot?9379p4");
+  src: url("../resource/iconfonts/icomoon.eot?9379p4#iefix")
+      format("embedded-opentype"),
+    url("../resource/iconfonts/icomoon.ttf?9379p4") format("truetype"),
+    url("../resource/iconfonts/icomoon.woff?9379p4") format("woff"),
+    url("../resource/iconfonts/icomoon.svg?9379p4#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,7 +13,7 @@
 
 /* 轮播图banner背景 */
 .banner {
-  background-color: rgba(15,17,55);
+  background-color: rgba(15, 17, 55);
 }
 .banner .w {
   width: 1400px;
@@ -46,7 +47,7 @@
   line-height: 30px;
   left: 0;
   bottom: 25px;
-  background-color: #2558DE;
+  background-color: #2558de;
   color: #fff;
   text-align: center;
   font-size: 16px;
@@ -58,7 +59,7 @@
   height: 250px;
   background-color: rgba(91, 144, 229, 0.5);
 }
-.course-img a:hover .mask{
+.course-img a:hover .mask {
   display: block;
 }
 .course h3 {
@@ -77,7 +78,7 @@
   margin-top: 40px;
   font-size: 10px;
 }
-.course .date{
+.course .date {
   color: #b0b0b0;
 }
 .course .students,
@@ -86,5 +87,35 @@
   text-decoration: underline;
 }
 .course .star {
-  font-family: icomoon ,Arial, Helvetica, sans-serif;
+  font-family: icomoon, Arial, Helvetica, sans-serif;
+}
+/* 更多 */
+.showmore {
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  margin-top: 30px;
+  text-align: right;
+  color: #737373;
+  font-size: 28px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.showmore i {
+  position: relative;
+  top: 2px;
+  font-family: icomoon, Arial, Helvetica, sans-serif;
+}
+/* 清除浮动 */
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+.clearfix::after {
+  clear: both;
+}
+.clearfix {
+  /* IE6&7 */
+  *zoom: 1;
 }
