--- a/course/course.css
+++ b/course/course.css
@@ -37,7 +37,7 @@
   position: relative;
 }
 .course-img img {
-  width: 580px;
+  width: 100%;
   height: 250px;
 }
 .course-img .tag {
@@ -55,7 +55,7 @@
 .course-img .mask {
   position: absolute;
   display: none;
-  width: 580px;
+  width: 100%;
   height: 250px;
   background-color: rgba(91, 144, 229, 0.5);
 }
