--- a/practice/practice.css
+++ b/practice/practice.css
@@ -3,7 +3,7 @@
   position: relative;
   display: block;
   height: 390px;
-  background: url(../resource/images/topBg.png);
+  background: url(../resource/images/practice/topBg.png);
   margin-top: 20px;
   text-align: center;
   overflow: hidden;
@@ -50,6 +50,7 @@
   height: 30px;
   line-height: 30px;
   margin-top: 10px;
+  margin-bottom: 15px;
   text-align: right;
   color: #737373;
   font-size: 28px;
@@ -63,4 +64,71 @@
 }
 .showmore:hover {
   color: #2658DF;
+}
+/* 练习模块 */
+.practice li {
+  float: left;
+  width: 373px;
+  height: 350px;
+  /* background-color: pink; */
+  margin-right: 40px;
+  margin-bottom: 30px;
+}
+.practice .no-margin {
+  margin-right: 0;
+}
+.practice-img {
+  position: relative;
+}
+.practice-img img {
+  width: 100%;
+  height: 250px;
+}
+.practice-img .tag {
+  position: absolute;
+  width: 85px;
+  height: 30px;
+  line-height: 30px;
+  left: 0;
+  bottom: 25px;
+  background-color: #2558de;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+}
+.practice-img .mask {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 250px;
+  background-color: rgba(91, 144, 229, 0.5);
+}
+.practice-img a:hover .mask {
+  display: block;
+}
+.practice h3 {
+  font-size: 26px;
+  font-weight: 400;
+  margin-top: 20px;
+}
+.practice h3 a {
+  color: #000;
+}
+.practice h3 a:hover {
+  color: #1a54e7;
+}
+.practice span {
+  display: block;
+  margin-top: 25px;
+  font-size: 10px;
+}
+.practice .students {
+  color: #b0b0b0;
+}
+.practice .star {
+  color: #1a54e7;
+  text-decoration: underline;
+}
+.practice .star {
+  font-family: icomoon, Arial, Helvetica, sans-serif;
 }
